[gd_scene load_steps=10 format=2]

[ext_resource path="res://Tanks/AlienTank/Tank.gd" type="Script" id=1]
[ext_resource path="res://Tanks/BaseTank/PlayerNameText.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tanks/AlienTank/Shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Tanks/AlienTank/Move.wav" type="AudioStream" id=4]
[ext_resource path="res://Tanks/AlienTank/Alarm.wav" type="AudioStream" id=5]
[ext_resource path="res://Tanks/AlienTank/icon.png" type="Texture" id=6]
[ext_resource path="res://Tanks/AlienTank/tank.png" type="Texture" id=7]
[ext_resource path="res://Tanks/AlienTank/LightMask.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]

resource_name = "Destroy"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.8, 1.1, 1.4, 1.7, 2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 1.0, 0.01, 1.0, 0.01, 1.0, 0.01 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sounds/Alarm:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.5, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Tank" type="KinematicBody2D"]

position = Vector2( 544.794, 391.518 )
scale = Vector2( 1.36678, 1.40962 )
z_index = -1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
__meta__ = {
"_edit_group_": true
}
UP = 16777232
DOWN = 16777234
LEFT = 16777231
RIGHT = 16777233
SHOOT = 77
rotation_speed = 5
movement_speed = 130
go_back_speed_multiplier = 0.5
health = 10
is_controlled_by_mobile = false
AI = false
seconds_between_path_updates = 1
stop_at_distance = 100
clear_path_points_at = 30
minimum_shoot_cooldown = 0.5
field_of_detection = 10000
player_name_label = ExtResource( 2 )
label_position = Vector2( 0, 30 )

[node name="Sounds" type="Node" parent="." index="0"]

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sounds" index="0"]

position = Vector2( 542.658, 319.21 )
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Move" type="AudioStreamPlayer2D" parent="Sounds" index="1"]

position = Vector2( 546.341, 302.022 )
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Alarm" type="AudioStreamPlayer2D" parent="Sounds" index="2"]

position = Vector2( 547.569, 313.072 )
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Destroy = SubResource( 1 )
blend_times = [  ]

[node name="ShootPosition" type="Position2D" parent="." index="2"]

position = Vector2( 0.193268, -15.885 )
_sections_unfolded = [ "Transform" ]

[node name="ShootPosition2" type="Position2D" parent="." index="3"]

position = Vector2( 11.244, -1.88312 )
_sections_unfolded = [ "Transform" ]

[node name="ShootPosition3" type="Position2D" parent="." index="4"]

position = Vector2( -10.6506, -1.5202 )
_sections_unfolded = [ "Transform" ]

[node name="ShootPosition4" type="Position2D" parent="." index="5"]

position = Vector2( 0.203247, 12.5722 )
_sections_unfolded = [ "Transform" ]

[node name="Description" type="RichTextLabel" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "A sturdy sci-fi tank shooting in 4 directions."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="7"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -2.33365, -14.2488, -1.42938, -14.1725, -1.42938, -13.3339, 2.54129, -13.2196, 2.50201, -14.2488, 3.60278, -14.0963, 3.56348, -13.1815, 2.58063, -13.1052, 2.58063, -12.1141, 1.59775, -12.1141, 1.63708, -9.2933, 2.61993, -9.21704, 2.61993, -10.2462, 5.48987, -10.1319, 7.53418, -8.03534, 7.65216, -3.34668, 9.53812, -3.20038, 9.58871, 0.792358, 7.57196, 0.808716, 7.57199, 5.79147, 5.55524, 7.79605, 2.57654, 7.81241, 2.55966, 6.79785, 1.59766, 6.80603, 1.59763, 9.79242, 2.55118, 9.80878, 2.56799, 10.7579, 3.56378, 10.8152, 3.59753, 11.7888, 2.55966, 11.7888, 2.54272, 10.8315, -1.35406, 10.8565, -1.50986, 11.8511, -2.46353, 11.7951, -2.40576, 10.8423, -1.47522, 10.7223, -1.33646, 9.83359, -0.556183, 9.83359, -0.440582, 6.77927, -1.42316, 6.77927, -1.48099, 7.81607, -4.39978, 7.76001, -6.42276, 5.77051, -6.42227, 0.846436, -8.388, 0.770172, -8.42728, -3.19421, -6.42227, -3.19421, -6.42227, -8.14972, -4.41724, -10.17, -1.39011, -10.2082, -1.42938, -9.17892, -0.48587, -9.33142, -0.525208, -12.1903, -1.58667, -12.2285, -1.46875, -13.2577, -2.45157, -13.2577 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="8"]

visible = false
position = Vector2( 0.703522, -0.0401306 )
texture = ExtResource( 6 )
vframes = 3
hframes = 4
_sections_unfolded = [ "Animation" ]

[node name="Sprite2" type="Sprite" parent="." index="9"]

position = Vector2( 0.703522, -0.0401306 )
texture = ExtResource( 7 )
vframes = 3
hframes = 4
_sections_unfolded = [ "Animation" ]

[node name="Light2D" type="Light2D" parent="." index="10"]

enabled = false
editor_only = false
texture = ExtResource( 8 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.01
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCast2D" type="RayCast2D" parent="." index="11"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, -200 )
collision_mask = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


